# cloudformation-custom-resource-terraform

./: .gitignore  README.md  Taskfile.env  Taskfile.yaml  pyproject.toml
infrastructure/: cloudformation-custom-resource-terraform.yaml
src/: main.py
tests/: Taskfile.yaml  lib.yaml
tests/resources/: random-pet-create.tf  random-pet-delete.tf  random-pet-update.tf
tests/test-backend-auto/: Taskfile.yaml
tests/test-backend-auto/templates/: Create.yaml
tests/test-backend-inline/: Taskfile.yaml
tests/test-backend-inline-malformed/: Taskfile.yaml
tests/test-backend-inline-malformed/templates/: Create.yaml
tests/test-backend-inline/templates/: Create.yaml
tests/test-backend-malformed/: Taskfile.yaml
tests/test-backend-malformed/templates/: Create.yaml
tests/test-backend-not-set/: Taskfile.yaml
tests/test-backend-not-set/templates/: Create.yaml
tests/test-configuration-location-http/: Taskfile.yaml
tests/test-configuration-location-http-inaccessible/: Taskfile.yaml
tests/test-configuration-location-inline/: Taskfile.yaml
tests/test-configuration-location-s3/: Taskfile.yaml
tests/test-configuration-location-s3-inaccessible/: Taskfile.yaml
tests/test-configuration-malformed/: Taskfile.yaml
tests/test-environment/: Taskfile.yaml
tests/test-environment-malformed/: Taskfile.yaml
tests/test-execution-logs-target-arn/: Taskfile.yaml
tests/test-outputs/: Taskfile.yaml
tests/test-outputs-undefined-in-terraform-configuration/: Taskfile.yaml
tests/test-variables/: Taskfile.yaml
tests/test-variables-malformed/: Taskfile.yaml
(+16 files in other folders)
