[tool.poetry]
name = "cloudformation-custom-resource-terraform"
version = "0.0.2"
description = "CloudFormation Custom Resource - Terraform Configuration"
package-mode = false
authors = ["Humanonymous <row_pattern_0z@icloud.com>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.34"
urllib3 = "^2.2.3"
cfnresponse = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
